tests/invalid/vars_02.p
/*
 * vim: ft=plasma
 * This is free and unencumbered software released into the public domain.
 * See ../LICENSE.unlicense
 */

module Vars_02

export
func foo(a : Int, a : Int) -> Int {
    return a + a
}

